# xai-lab

./: .env.example  .gitignore  LICENSE  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
data/samples/: README.md
deploy/: Dockerfile.app
scripts/: compare_classifiers.py  fetch_samples.py  run_batch.py  smoke_app.py
src/: config.py
src/metrics/: __init__.py  iou.py  timing.py
src/models/: clip_classifier.py  llm_classifier.py  loader.py  siglip_classifier.py
src/translation/: __init__.py  gemini.py
src/ui/: streamlit_app.py
src/utils/: imagenet.py  preprocess.py  viz.py
src/xai/: __init__.py  base.py  gradcam.py  integrated_grads.py  lime_xai.py  occlusion.py  runner.py  smoothgrad.py
tests/: test_methods.py  test_metrics.py  test_models.py
