[project]
name = "xai-lab"
version = "0.1.0"
description = "Webowa stacja diagnostyczna dla klasyfikatorow obrazow: 6 metod XAI x 2 architektury (CNN + ViT)"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Thomas-RC" }]

dependencies = [
    # ML core (torch CPU instalowany osobno z indeksu CPU w Dockerfile)
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "numpy>=1.26.0,<2.2",
    "pillow>=11.0.0",
    # XAI
    "captum>=0.7.0",
    "grad-cam>=1.5.0",
    "lime>=0.2.0.1",
    "scikit-image>=0.24.0",
    # UI
    "streamlit>=1.40.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "tabulate>=0.9.0",                # do .to_markdown() w build_pdf.py
    # Config + utils
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    # Sprawozdanie
    "weasyprint>=63.0",
    "markdown>=3.7",
    "pygments>=2.18.0",
    # Vertex AI (Gemini 2.5 Flash do tlumaczenia etykiet PL)
    "google-genai>=1.74.0",
    # Open-vocabulary vision encoders (NIE LLM) do porownania z Geminim
    "open-clip-torch>=3.3.0",        # CLIP ViT-B/32 (OpenAI 2021)
    "transformers>=5.7.0",           # SigLIP 2 (Google 2025) via HuggingFace
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: testy wolne (laduja prawdziwe modele lub LIME — > 5 s)",
]
